--- a/styles/style.css
+++ b/styles/style.css
@@ -154,7 +154,7 @@ header *{
 }
 #offers .offers-items{
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   text-align: center;
   color: #fff;
